refactor: 각 가로 라인을 생성하는 기능 수정